[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/WindowResize/window_resize.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="TextEdit" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]

[node name="ResizeArea" type="Control" parent="."]
mouse_default_cursor_shape = 12
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tree_entered" from="ResizeArea" to="." method="_on_ResizeArea_tree_entered"]
[connection signal="tree_exited" from="ResizeArea" to="." method="_on_ResizeArea_tree_exited"]
